# primitiveBox

./: .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  go.mod  go.sum  implementation_plan_v3.md
.github/workflows/: ci.yml  release.yml
.primitivebox/: controlplane.db
.primitivebox/audit/: audit-20260314-145159.jsonl  audit-20260315-093854.jsonl  audit-20260315-094100.jsonl  audit-20260315-094229.jsonl  audit-20260315-094457.jsonl  audit-20260315-095214.jsonl  audit-20260315-100517.jsonl  audit-20260315-101620.jsonl  audit-20260315-113459.jsonl  audit-20260315-113550.jsonl  audit-20260315-113919.jsonl  audit-20260315-113939.jsonl  audit-20260315-114155.jsonl  audit-20260315-114449.jsonl  (+33 more)
docs/: ARCHITECTURE.md  CHANGELOG.md  QUICKSTART.md  ROADMAP.md  VISION.md  app-primitive-manifest-v2.md  app-primitive-protocol-report.md  os-primitives-rfc.md  phase2-audit.md  phase2-demo.md  phase3-os-adapter-demo.md  user-guide.md
scripts/: allinone-entrypoint.sh  lint.sh
sdk/python/: README.md  pyproject.toml  requirements.txt  setup.py
sdk/python/primitivebox/: __init__.py  adapters.py  app.py  async_client.py  client.py  events.py  goals.py  html_layout.py  primitives.py
sdk/python/primitivebox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python/tests/: test_app_server.py  test_client.py  test_html_layout.py
tests/: goal_api_test.go  integration_test.go
web/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
(+282 files in other folders)
