[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "primitivebox"
dynamic = ["version"]
description = "Python SDK for PrimitiveBox — checkpointed sandbox runtime for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "beautifulsoup4>=4.12.0",
    "tinycss2>=1.2.0",
]

[project.optional-dependencies]
async = ["aiohttp>=3.9"]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/JadeSnow7/primitiveBox"
Repository = "https://github.com/JadeSnow7/primitiveBox"
Issues = "https://github.com/JadeSnow7/primitiveBox/issues"

[tool.hatch.version]
path = "VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["primitivebox"]
